2006-07-17  Inge Wallin  <inge@lysator.liu.se>

	Simplify paintContent():
	* kchart_part.{h,cc} (createLabelsAndLegend): New function
	(paintContent): call createLabelsAndLegend

	================================================================
	KChart 1.5 released

	<There are a lot of missed entries here.

	
2005-09-15  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 108770: [PATCH] kchart should have a format menu
	* kchart.rc (Format): New menu
	(KChartTypes toolbar): place to the left
	* kchart_view.cc (KChartView::KChartView): change strings for some
	actions.

2005-08-08  Inge Wallin  <inge@lysator.liu.se>

	Code cleaning.
	* kchartWizard.{h,cc}: cleaning

2005-07-28  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 108461: Bug in generation of HiLo charts
	* kchart_part.cc (paintContent): Add code to handle HiLo chart
	separately.

	General code cleaning.
	
2005-07-23  Inge Wallin  <inge@lysator.liu.se>

	Fix an old FIXME: Get rid of KChartPart::m_bLoading;
	* kchart_part.{h,cc} (m_bLoading): removed
	(isLoading): removed

	Some code cleaning (improved comments).

2005-07-??  David Faure

	Fix bug 10xxxx: 
	* ??
	
2005-07-03  David Faure

	First steps for OASIS loading of charts.
	Loads chart type, row and columns labels, and the data.
	* kchart_part.{h,cc} (loadOasisData): New method
	(loadOasis): New method
	* kchart_params.{h,cc} (loadOasis): New method

	Code cleaning.
	* kchartWizardSelectChartTypePage.{h,cc} (KChartButton): take
	const QPixmap& instead of QPixmap*.
	
	
	================================================================
	KChart 1.4 released

	<There are some missed entries here.  I will try to find out what
	they were. /ingwa>

2005-05-10  Inge Wallin  <inge@lysator.liu.se>
	
	More work on bug 105356:
	* kdchart/KDChartParams.h (lineColor): return _lineColor again.
	* kdchart/KDChartParams_io.h (saveXML): Only save the line color
	if it is non-null.
	* kchart_part.cc (setAxisDefaults): Always set lineColor to